<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_gripper_control</name>
  <version>1.0.0</version>
  <description>Package to control a 2-Finger Gripper from Robotiq inc.</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author>Nicolas Lauzier (Robotiq inc.)</author>

  <!--buildtool_depend>catkin</buildtool_depend-->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <!--depend>robotiq_ethercat</depend-->

  <build_depend>message_generation</build_depend>

  <!-- exec_depend>message_runtime</exec_depend -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>
