<?xml version="1.0"?>
<package format="2">
  <name>robotiq_modbus_rtu</name>
  <version>1.0.0</version>
  <description>A stack to communicate with Robotiq grippers using the Modbus RTU protocol</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/robotiq</url>
  <author>Nicolas Lauzier (Robotiq inc.)</author>
  <author email="kphawkins@gatech.edu">Kelsey Hawkins</author>

  <!--buildtool_depend>catkin</buildtool_depend-->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>python3-pymodbus</depend>
  <depend>rclpy</depend>
  
  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>
